clusters/nas/outpost/ingress-authentik-outpost.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/instance: ${authentik_outpost_name}
    app.kubernetes.io/name: authentik-proxy
    goauthentik.io/outpost-name: ${authentik_outpost_name}
    goauthentik.io/outpost-type: proxy
  name: ak-outpost-nas-cluster-outpost
  namespace: authentik
spec:
  rules:
  - host: '*.${domain_name}'
    http:
      paths:
      - backend:
          service:
            name: ak-outpost-${authentik_outpost_name}
            port:
              number: 9000
        path: /outpost.goauthentik.io
        pathType: Prefix
  tls: []
